day3/07_ingress/traefik/04-hello-ingress-domain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-domain
spec:
  rules:
  - host: mydomain.com
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-domain1
spec:
  rules:
  - host: mydomain.com
    http:
      paths:
      - path: /hello1
        pathType: Prefix
        backend:
          service:
            name: hello-service1
            port:
              number: 80
